# btc-scripts

./: .gitignore  README.MD
block-builder-challenge/: .gitignore  Cargo.toml  README.md
block-builder-challenge/.github/workflows/: classroom.yml
block-builder-challenge/solution/: run_builder.sh
block-builder-challenge/solution/block_builder/: Cargo.toml
btc-icp-kit/: Cargo.toml
lightning-route-builder-cosmasken/: README.md
lightning-route-builder-cosmasken/.github/workflows/: classroom.yml
lightning-route-builder-cosmasken/submissions/: run.sh
lightning-route-builder-cosmasken/test/: check_run.sh
lightning-rpc-scavenger-hunt-cosmasken/: README.md  alias.sh  channel-setup.sh
lightning-rpc-scavenger-hunt-cosmasken/.github/workflows/: classroom.yml
lightning-rpc-scavenger-hunt-cosmasken/conf/: bitcoin.conf  lnd.conf  lnd0.conf  lnd1.conf
lightning-rpc-scavenger-hunt-cosmasken/submissions/: 001-preimage.txt  002.sh  003-preimage.txt  003.sh
lightning-rpc-scavenger-hunt-cosmasken/test/: 001-invoice_list.txt  003-check_forward.sh  003-invoice_list.txt  lnd2-readonly.macaroon  lnd2-tls.cert
scavenger-hunt/.github/: setup.sh
scavenger-hunt/.github/workflows/: classroom.yml
scavenger-hunt/submission/: 002.sh  003.sh  004.sh  005.sh  006.sh  007.sh  008.sh  009.sh  010.sh
wallet/: Cargo.toml
wallet/.github/test/: setup.sh  test_spend.sh  (+2 more)
wallet/solution/: run_spend.sh
wallet/solution/rust/balance/: Cargo.toml
wallet/solution/rust/balance/src/: lib.rs
wallet/solution/rust/spend/: Cargo.toml
wallet/solution/rust/spend/src/: lib.rs  main.rs
(+2 files in other folders)
