[package]
name = "balance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Add you custom dependencies below
bs58 = "0.5.0"
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
num-bigint = "0.4.6"
num-traits = "0.2.19"
secp256k1 = "0.30.0"
sha2 = "0.10.8"
hmac = "0.12.1"
ripemd = "0.1.3"
base58 = "0.2.0"
anyhow = "1.0.95"
bitcoin_hashes = "0.16.0"
k256 = "0.13.4"
hex-literal = "0.4.1"
